# emp-pub2exc

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: architect-developer.md  auditor-supervisor.md  formalizer.md  paper-analyst.md
.claude/commands/: audit.md  run-pipeline.md
.claude/hooks/: log_tool_use.sh  validate_write.sh
.claude/rules/: agent-comms.md  code-style.md  hitl.md  testing.md
.claude/skills/architect_developer/: SKILL.md
.claude/skills/auditor_supervisor/: SKILL.md
.claude/skills/formalizer/: SKILL.md
.claude/skills/paper_analyst/: SKILL.md
.github/workflows/: ci.yml
agents/architect_developer/: __main__.py  agent.py
agents/auditor_supervisor/: __main__.py  agent.py
agents/formalizer/: __main__.py  agent.py
agents/paper_analyst/: __main__.py  agent.py
scripts/: resume_pipeline.py  run_agent.py  run_pipeline.py  status.py
shared/: base_agent.py  channel.py  example_utils.py  llm_client.py  message_schema.py
tests/: conftest.py  test_run_pipeline_cli.py
tests/agents/: test_auditor_supervisor.py  test_formalizer.py  test_paper_analyst.py
tests/examples/KGTN-en/: KGTN-en.md  repo.txt
tests/shared/: test_channel.py  test_example_utils.py  test_llm_client.py  test_message_schema.py
